gcc/testsuite/g++.dg/expr/return1.C
// PR c++/18545

struct A;

A foo()  // { dg-error "" }
{
  A a; // { dg-error "" }
  return a;
}
